--- a/views/ccpp_purchase_history_view.xml
+++ b/views/ccpp_purchase_history_view.xml
@@ -211,6 +211,22 @@
         <field name="code">action = model.action_purchase_history_manager()</field>
     </record>
 
+    <record id="ccpp_purchase_history_action_manager_all_department" model="ir.actions.server">
+        <field name="name">Purchase History</field>
+        <field name="model_id" ref="model_ccpp_purchase_history"/>
+        <field name="type">ir.actions.server</field>
+        <field name="state">code</field>
+        <field name="code">action = model.action_purchase_history_manager_all_department()</field>
+    </record>
+
+    <record id="ccpp_purchase_history_action_ceo" model="ir.actions.server">
+        <field name="name">Purchase History</field>
+        <field name="model_id" ref="model_ccpp_purchase_history"/>
+        <field name="type">ir.actions.server</field>
+        <field name="state">code</field>
+        <field name="code">action = model.action_purchase_history_ceo()</field>
+    </record>
+
     <!--<menuitem id="menu_ccpp_purchase_history" name="Customer Purchase History" parent="crm.crm_menu_sales" action="ccpp_purchase_history_action" sequence="103"/>-->
     <!--<menuitem id="menu_ccpp_purchase_history_by_prodecy" name="Customer Purchase History 2" parent="crm.crm_menu_sales" action="ccpp_purchase_history_action_by_product" sequence="103"/>-->
     
