--- a/views/ccpp_sale_target_view.xml
+++ b/views/ccpp_sale_target_view.xml
@@ -93,4 +93,20 @@
         <field name="code">action = model.action_sale_target_manager()</field>
     </record>
 
+    <record id="ccpp_sale_target_action_manager_all_department" model="ir.actions.server">
+        <field name="name">Sales Target</field>
+        <field name="model_id" ref="model_ccpp_sale_target"/>
+        <field name="type">ir.actions.server</field>
+        <field name="state">code</field>
+        <field name="code">action = model.action_sale_target_manager_all_department()</field>
+    </record>
+
+    <record id="ccpp_sale_target_action_ceo" model="ir.actions.server">
+        <field name="name">Sales Target</field>
+        <field name="model_id" ref="model_ccpp_sale_target"/>
+        <field name="type">ir.actions.server</field>
+        <field name="state">code</field>
+        <field name="code">action = model.action_sale_target_ceo()</field>
+    </record>
+
 </odoo>
